[워들] 자바스크립트 로직 작성
간단한 워들 게임 만들기

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <main>
-        <div id="timer">time: 00:00</div>
+        <div id="timer">00:00</div>
         <div class="board-row row-0">
             <div class="board-block" data-index="00"></div>
             <div class="board-block" data-index="01"></div>
@@ -108,5 +108,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
